fix: better spacing on travel page

--- a/src/pages/Travel/Travel.module.css
+++ b/src/pages/Travel/Travel.module.css
@@ -1,6 +1,11 @@
 @media (pointer:none), (pointer:coarse) {
   .wrapper {
+    display: block;
     flex-direction: column;
+  }
+
+  .right {
+    min-height: 40vh;
   }
 }
 
@@ -8,10 +13,14 @@
   height: 100%;
   width: 100%;
   display: flex;
-}
 
-.left, .right {
-  height: 100%;
+  h2, p, address, ul {
+    margin: 0;
+  }
+
+  h2+div {
+    margin: 0 0 2rem 0;
+  }
 }
 
 .left {
